# a68k

./: .gitignore  A68kdef.h  A68kglb.h  A68kmain.c  A68kmisc.c  Adirect.c  CMakeLists.txt  Codegen.c  Makefile  Opcodes.c  Operands.c  Readme.md  Symtab.c  embedlvos.c
.github/workflows/: c-cpp.yml
a68k/: .cproject  .gitignore  .project  A68kdef.h  A68kglb.h  A68kmain.c  A68kmisc.c  Adirect.c  Codegen.c  Opcodes.c  Operands.c  Symtab.c  protos.h  wb_parse.c
benchmarks/: bench.cpp
samples/: Cell-Auto.asm  alkis.asm  gal.asm  print.asm
